--- a/cdi.html
+++ b/cdi.html
@@ -5,8 +5,8 @@ function copieChoix()
  var separ2 = ". ";
  var separ3 = "p. ";
  var separ4 = "n° ";
- var separ5 = "Disponible sur : ";
- var separ6 = " Consulté le : ";
+ var separ5 = " Consulté le : ";
+ var separ6 = "Disponible sur : ";
  var separ7 = " [En ligne]";
  var separ8 = "\"";
 var separ9 = " p.";
@@ -106,12 +106,12 @@ this.form.result7.style.display='inline';
 <table style="border-collapse: collapse; width: 450px; height: 80px;">
 <tbody>
 <tr>
-<td style="padding-top:5px;"><input size="18" value="NOM S de l'auteur" title="Vide si l'auteur est anonyme." id="result" /></td>
+<td style="padding-top:5px;"><input size="18" value="NOM de l'auteur" title="Vide si l'auteur est anonyme." id="result" /></td>
 <td style="padding-top:5px;"><input size="18" value="Pr&eacute;nom de l'auteur" title="Vide si l'auteur est anonyme." id="result2" /></td>
 <td style="padding-top:5px;"><input size="18" value="Titre du livre" id="result3" /></td>
 </tr>
 <tr>
-<td style="padding-top:5px;"><input size="18" value="In : Titre du p&eacute;riodique" title="Par exemple Science &amp; vie junior, Wapiti..." id="result4" /></td>
+<td style="padding-top:5px;"><input size="18" value="Titre du p&eacute;riodique" title="Par exemple Science &amp; vie junior, Wapiti..." id="result4" /></td>
 <td style="padding-top:5px;"><input size="18" value="Nom du site web" id="result5" /></td>
 <td style="padding-top:5px;"><input size="18" value="&Eacute;diteur" title="Se trouve sur la couverture ou dans les premi&egrave;res pages du livre." id="result6" /></td>
 </tr>
@@ -121,13 +121,13 @@ this.form.result7.style.display='inline';
 <td style="padding-top:5px;"><input size="18" value="Date de publication" title="Se trouve dans les premi&egrave;res ou derni&egrave;res pages du livre, sous la mention 'D&eacute;p&ocirc;t l&eacute;gal'." id="result9" /></td>
 </tr>
 <tr>
-<td style="padding-top:5px;"><input size="18" value="Adresse URL" title="De type 'http://www.exemple.fr/page45.html'." id="result10" /></td>
+<td style="padding-top:5px;"><input size="18" value="Date de consultation" title="Date exacte du jour comme '16/12/2012'." id="result10" /></td>
 <td style="padding-top:5px;"><input size="18" value="Num&eacute;ro" id="result11" /></td>
 <td style="padding-top:5px;"><input size="18" value="Nombre total de pages" title="Inscrire le dernier num&eacute;ro de page imprim&eacute;." id="result12" /></td>
 </tr>
 <tr>
 <td style="padding-top:5px;"><input size="18" value="Pagination" title="Premi&egrave;re page et derni&egrave;re page de l'article ou du chapitre, comme '12-23'." id="result13" /></td>
- <td style="padding-top:5px;"><input size="18" value="Date de consultation" title="Date exacte du jour comme '16/12/2012'." id="result14" /></td>
+<td style="padding-top:5px;"><input size="18" value="Adresse URL" title="De type 'http://www.exemple.fr/page45.html'." id="result14" /></td>
 <td style="padding-top:5px;"><input size="18" value="Titre de la page web" title="Titre de la page &agrave; l'int&eacute;rieur du site web." id="result15" /></td>
 </tr>
 </tbody>
