--- a/cdi.html
+++ b/cdi.html
@@ -117,7 +117,7 @@ this.form.result7.style.display='inline';
 </tr>
 <tr>
 <td style="padding-top:5px;"><input size="18" value="Titre du chapitre" id="result7" /></td>
-<td style="padding-top:5px;"><input size="18" value="Titre de l'article" id="result8" /></td>
+<td style="padding-top:5px;"><input size="18" value=Titre de l'article id="result8" /></td>
 <td style="padding-top:5px;"><input size="18" value="Date de publication" title="Se trouve dans les premi&egrave;res ou derni&egrave;res pages du livre, sous la mention 'D&eacute;p&ocirc;t l&eacute;gal'." id="result9" /></td>
 </tr>
 <tr>
