--- a/cdi.html
+++ b/cdi.html
@@ -142,9 +142,9 @@ this.form.result7.style.display='inline';
 <table style="border-collapse: collapse; width: 450px; height: 80px;">
 <tbody>
 <tr>
-<td style="padding-top:5px;"><input size="18" value="NOM de l'auteur" title="Vide si l'auteur est anonyme." id="result" /></td>
-<td style="padding-top:5px;"><input size="18" value="Pr&eacute;nom de l'auteur" title="Vide si l'auteur est anonyme." id="result2" /></td>
-<td style="padding-top:5px;"><input size="18" value="Titre du livre" id="result3" /></td>
+<td style="padding-top:5px;"><input size="18" value="NOM de l'auteur/réalisateur" title="Vide si l'auteur est anonyme." id="result" /></td>
+<td style="padding-top:5px;"><input size="18" value="Pr&eacute;nom de l'auteur/réalisateur" title="Vide si l'auteur est anonyme." id="result2" /></td>
+<td style="padding-top:5px;"><input size="18" value="Titre du livre/de la vidéo" id="result3" /></td>
 </tr>
 <tr>
 <td style="padding-top:5px;"><input size="18" value="Titre du p&eacute;riodique" title="Par exemple Science &amp; vie junior, Wapiti..." id="result4" /></td>
