--- a/cdi.html
+++ b/cdi.html
@@ -10,6 +10,7 @@ function copieChoix()
  var separ7 = " [En ligne]";
  var separ8 = "\"";
 var separ9 = " p.";
+  var separ10 = "Disponible sur : ";
  if (document.form.livre.checked == true) {
  document.getElementById("result19").focus();
  var concat = document.getElementById("result").value.toUpperCase() + separ + document.getElementById("result2").value + separ2 + document.getElementById("result3").value.italics() + separ2 + document.getElementById("result6").value + separ + document.getElementById("result9").value + separ2 + document.getElementById("result12").value + separ9;
