--- a/cdi.html
+++ b/cdi.html
@@ -36,7 +36,7 @@ var separ9 = " p.";
  var concat = document.getElementById("result").value.toUpperCase() + separ + document.getElementById("result2").value + separ2 + separ8 + document.getElementById("result3").value + separ8 + separ2 + document.getElementById("result16").value.italics() + separ7 + separ + document.getElementById("result17").value + separ2 + separ5 + document.getElementById("result18").value;
  document.getElementById("result19").value = concat;
  }
- if ((document.form.livre.checked == false)&&(document.form.chapitre.checked == false)&&(document.form.article.checked == false)&&(document.form.web.checked == false)) {
+ if ((document.form.livre.checked == false)&&(document.form.chapitre.checked == false)&&(document.form.article.checked == false)&&(document.form.web.checked == false)&&(document.form.video.checked == false)) {
  alert("Choississez un type de document !");
  return false
  }
