--- a/cdi.html
+++ b/cdi.html
@@ -120,7 +120,7 @@ this.form.result7.style.display='inline';
  this.form.result17.style.display='none';
  this.form.result18.style.display='none';
  }
- return true;" id="web" />Page internet <br /><br /><b>2 - Remplissez les champs suivants :</b><br />(Passez la souris sur les champs pour avoir plus d'informations)<br /><br />
+ return true;" id="web" />Page internet <input name="typedoc" type="radio" value="Video" onclick="
  if (this.checked) {
  this.form.result3.style.display='inline';
  this.form.result4.style.display='none';
@@ -139,7 +139,7 @@ this.form.result7.style.display='inline';
  this.form.result17.style.display='inline';
  this.form.result18.style.display='inline';
  }
- return true;" id="video" />Vidéo en ligne <input name="typedoc" type="radio" value="Web" onclick="
+ return true;" id="video" />Vidéo en ligne <br /><br /><b>2 - Remplissez les champs suivants :</b><br />(Passez la souris sur les champs pour avoir plus d'informations)<br /><br />
 <table style="border-collapse: collapse; width: 450px; height: 80px;">
 <tbody>
 <tr>
