--- a/cdi.html
+++ b/cdi.html
@@ -168,7 +168,7 @@ this.form.result7.style.display='inline';
 <td style="padding-top:5px;"><input size="18" value="Titre de la page web" title="Titre de la page &agrave; l'int&eacute;rieur du site web." id="result15" /></td>
 </tr>
 <tr>
-<td style="padding-top:5px;"><input size="18" value="Titre de la Vidéo" id="result16" /></td>
+<td style="padding-top:5px;"><input size="18" value="Titre de la vidéo" id="result16" /></td>
 <td style="padding-top:5px;"><input size="18" value="Année d'édition" id="result17" /></td>
 <td style="padding-top:5px;"><input size="18" value="Durée de la vidéo" id="result18" /></td>
 </tr>
