--- a/cdi.html
+++ b/cdi.html
@@ -32,7 +32,7 @@ var separ9 = " p.";
  }
  if (document.form.video.checked == true) {
  document.getElementById("result19").focus();
- var concat = document.getElementById("result").value.toUpperCase() + separ + document.getElementById("result2").value + separ2 + document.getElementById("result3").value + separ2 + document.getElementById("result16").value.italics() + separ2 + document.getElementById("result17").value + separ2 + document.getElementById("result18").value + separ + separ6 + document.getElementById("result14").value;
+ var concat = document.getElementById("result").value.toUpperCase() + separ + document.getElementById("result2").value + separ2 + document.getElementById("result3").value + separ2 + document.getElementById("result16").value + separ2 + document.getElementById("result17").value + separ2 + document.getElementById("result18").value + separ + separ6 + document.getElementById("result14").value;
  document.getElementById("result19").value = concat;
  }
  if ((document.form.livre.checked == false)&&(document.form.chapitre.checked == false)&&(document.form.article.checked == false)&&(document.form.web.checked == false)&&(document.form.video.checked == false)) {
