--- a/cdi.html
+++ b/cdi.html
@@ -147,7 +147,7 @@ this.form.result7.style.display='inline';
 <td style="padding-top:5px;"><input size="18" value="Titre du livre/de la vidéo" id="result3" /></td>
 </tr>
 <tr>
-<td style="padding-top:5px;"><input size="18" value="Titre du p&eacute;riodique" title="Par exemple Science &amp; vie junior, Wapiti..." id="result4" /></td>
+<td style="padding-top:5px;"><input size="18" value="In : Titre du p&eacute;riodique" title="Par exemple Science &amp; vie junior, Wapiti..." id="result4" /></td>
 <td style="padding-top:5px;"><input size="18" value="Nom du site web" id="result5" /></td>
 <td style="padding-top:5px;"><input size="18" value="&Eacute;diteur" title="Se trouve sur la couverture ou dans les premi&egrave;res pages du livre." id="result6" /></td>
 </tr>
@@ -164,7 +164,7 @@ this.form.result7.style.display='inline';
 <tr>
 <td style="padding-top:5px;"><input size="18" value="Pagination" title="Premi&egrave;re page et derni&egrave;re page de l'article ou du chapitre, comme '12-23'." id="result13" /></td>
 <td style="padding-top:5px;"><input size="18" value="Adresse URL" title="De type 'http://www.exemple.fr/page45.html'." id="result14" /></td>
-<td style="padding-top:5px;"><input size="18" value="Titre de la page web/de la vidéo" title="Titre de la page &agrave; l'int&eacute;rieur du site web." id="result15" /></td>
+<td style="padding-top:5px;"><input size="18" value="In : Titre de la page web/de la vidéo" title="Titre de la page &agrave; l'int&eacute;rieur du site web." id="result15" /></td>
 </tr>
 <tr>
 <td style="padding-top:5px;"><input size="18" value="Producteur" id="result16" /></td>
