--- a/cdi.html
+++ b/cdi.html
@@ -22,7 +22,7 @@ var separ9 = " p.";
  }
  if (document.form.article.checked == true) {
  document.getElementById("result19").focus();
- var concat = document.getElementById("result").value + separ + document.getElementById("result2").value + separ2 + separ8 + document.getElementById("result8").value + separ8 + separ2 + document.getElementById("result4").value.italics() + separ + separ4 + document.getElementById("result11").value + separ + document.getElementById("result9").value + separ2 + separ3 + document.getElementById("result13").value;
+ var concat = document.getElementById("result").value + separ + document.getElementById("result2").value + separ2 + document.getElementById("result8").value + separ2 + document.getElementById("result4").value.italics() + separ + separ4 + document.getElementById("result11").value + separ + document.getElementById("result9").value + separ2 + separ3 + document.getElementById("result13").value;
  document.getElementById("result19").value = concat;
  }
  if (document.form.web.checked == true) {
