--- a/cdi.html
+++ b/cdi.html
@@ -9,7 +9,8 @@ function copieChoix()
  var separ6 = "Disponible sur : ";
  var separ7 = " [En ligne]";
  var separ8 = "\"";
-var separ9 = " p.";
+ var separ9 = " p.";
+ var separ10 = "In : "; 
  if (document.form.livre.checked == true) {
  document.getElementById("result19").focus();
  var concat = document.getElementById("result").value + separ + document.getElementById("result2").value + separ2 + document.getElementById("result3").value.italics() + separ2 + document.getElementById("result6").value + separ + document.getElementById("result9").value + separ2 + document.getElementById("result12").value + separ9;
@@ -22,7 +23,7 @@ var separ9 = " p.";
  }
  if (document.form.article.checked == true) {
  document.getElementById("result19").focus();
- var concat = document.getElementById("result").value + separ + document.getElementById("result2").value + separ2 + document.getElementById("result8").value + separ2 + document.getElementById("result4").value.italics() + separ + separ4 + document.getElementById("result11").value + separ + document.getElementById("result9").value + separ2 + separ3 + document.getElementById("result13").value;
+ var concat = document.getElementById("result").value + separ + document.getElementById("result2").value + separ2 + document.getElementById("result8").value + separ2 + separ10 + document.getElementById("result4").value.italics() + separ + separ4 + document.getElementById("result11").value + separ + document.getElementById("result9").value + separ2 + separ3 + document.getElementById("result13").value;
  document.getElementById("result19").value = concat;
  }
  if (document.form.web.checked == true) {
@@ -147,7 +148,7 @@ this.form.result7.style.display='inline';
 <td style="padding-top:5px;"><input size="18" value="Titre du livre/de la vidéo" id="result3" /></td>
 </tr>
 <tr>
-<td style="padding-top:5px;"><input size="18" value="In : Titre du p&eacute;riodique" title="Par exemple Science &amp; vie junior, Wapiti..." id="result4" /></td>
+<td style="padding-top:5px;"><input size="18" value="Titre du p&eacute;riodique" title="Par exemple Science &amp; vie junior, Wapiti..." id="result4" /></td>
 <td style="padding-top:5px;"><input size="18" value="Nom du site web" id="result5" /></td>
 <td style="padding-top:5px;"><input size="18" value="&Eacute;diteur" title="Se trouve sur la couverture ou dans les premi&egrave;res pages du livre." id="result6" /></td>
 </tr>
