--- a/cdi.html
+++ b/cdi.html
@@ -145,7 +145,7 @@ this.form.result7.style.display='inline';
 <tr>
 <td style="padding-top:5px;"><input size="28" value="Nom de l'auteur/réalisateur" title="Vide si l'auteur est anonyme." id="result" /></td>
 <td style="padding-top:5px;"><input size="28" value="Pr&eacute;nom de l'auteur/réalisateur" title="Vide si l'auteur est anonyme." id="result2" /></td>
- <td style="padding-top:5px;"><input size="28" value=<em>"Titre du livre/de la vidéo"</em> id="result3" /></td>
+ <td style="padding-top:5px;"><input size="28" value="Titre du livre/de la vidéo" id="result3" /></td>
 </tr>
 <tr>
 <td style="padding-top:5px;"><input size="28" value="Titre du p&eacute;riodique" title="Par exemple LIEN SOCIAL, Nutritioninfo..." id="result4" /></td>
