--- a/cdi.html
+++ b/cdi.html
@@ -14,6 +14,8 @@ function copieChoix()
  if (document.form.livre.checked == true) {
  document.getElementById("result19").focus();
  var concat = document.getElementById("result").value + separ + document.getElementById("result2").value + separ2 + document.getElementById("result3").value.italics() + separ2 + document.getElementById("result6").value + separ + document.getElementById("result9").value + separ2 + document.getElementById("result12").value + separ9;
+ var element = document.getElementById("result3");
+ element.style.fontStyle = "italic";
  document.getElementById("result19").value = concat;
  }
  if (document.form.chapitre.checked == true) {
