--- a/cdi.html
+++ b/cdi.html
@@ -147,7 +147,7 @@ this.form.result7.style.display='inline';
 <tr>
 <td style="padding-top:5px;"><input size="28" value="Nom de l'auteur/réalisateur" title="Vide si l'auteur est anonyme." id="result" /></td>
 <td style="padding-top:5px;"><input size="28" value="Pr&eacute;nom de l'auteur/réalisateur" title="Vide si l'auteur est anonyme." id="result2" /></td>
- <td style="padding-top:5px;"><input size="28" value="<i>Titre du livre/de la vidéo</i>" id="result3" /></td>
+ <td style="padding-top:5px;"><input size="28" value="Titre du livre/de la vidéo" <h1 id="result3"> ceci est un titre en italique</h1> /></td>
 </tr>
 <tr>
 <td style="padding-top:5px;"><input size="28" value="Titre du p&eacute;riodique" title="Par exemple LIEN SOCIAL, Nutritioninfo..." id="result4" /></td>
