--- a/cdi.html
+++ b/cdi.html
@@ -14,7 +14,7 @@ function copieChoix()
  if (document.form.livre.checked == true) {
  document.getElementById("result19").focus();
  var concat = document.getElementById("result").value + separ + document.getElementById("result2").value + separ2 + document.getElementById("result3").value + separ2 + document.getElementById("result6").value + separ + document.getElementById("result9").value + separ2 + document.getElementById("result12").value + separ9;
- <p id="result3">Ceci est un paragraphe en italique</p>
+ <h1 id="result3">Ceci est un paragraphe en italique</h1>
  var element = document.getElementById("result3");
  element.style.fontStyle = "italic";
  document.getElementById("result19").value = concat;
