--- a/cdi.html
+++ b/cdi.html
@@ -14,7 +14,7 @@ function copieChoix()
  if (document.form.livre.checked == true) {
  document.getElementById("result19").focus();
  var concat = document.getElementById("result").value + separ + document.getElementById("result2").value + separ2 + document.getElementById("result3").value + separ2 + document.getElementById("result6").value + separ + document.getElementById("result9").value + separ2 + document.getElementById("result12").value + separ9;
- var document.getElementById("result3").style.fontStyle = "italic";
+ document.getElementById("result3").style.fontStyle = "italic";
  document.getElementById("result19").value = concat;
  }
  if (document.form.chapitre.checked == true) {
