--- a/cdi.html
+++ b/cdi.html
@@ -15,7 +15,7 @@ function copieChoix()
  document.getElementById("result19").focus();
  var concat = document.getElementById("result").value + separ + document.getElementById("result2").value + separ2 + document.getElementById("result3").value + separ2 + document.getElementById("result6").value + separ + document.getElementById("result9").value + separ2 + document.getElementById("result12").value + separ9;
  document.getElementById("result19").value = concat;
- #result3 {
+ .italic {
     font-style: italic;
 }
  }
