--- a/cdi.html
+++ b/cdi.html
@@ -33,7 +33,7 @@ function copieChoix()
  }
  if (document.form.video.checked == true) {
  document.getElementById("result19").focus();
- var concat = document.getElementById("result").value + separ + document.getElementById("result2").value + separ2 + document.getElementById("result3").value + separ2 + document.getElementById("result16").value + separ + document.getElementById("result17").value + separ + document.getElementById("result18").value + separ + separ6 + document.getElementById("result14").value;
+ var concat = document.getElementById("result").value + separ + document.getElementById("result2").value + separ2 + document.getElementById("result3").value + separ2 + document.getElementById("result16").value + separ + document.getElementById("result17").value + separ + document.getElementById("result18").value + separ2 + separ6 + document.getElementById("result14").value;
  document.getElementById("result19").value = concat;
  }
  if ((document.form.livre.checked == false)&&(document.form.chapitre.checked == false)&&(document.form.article.checked == false)&&(document.form.web.checked == false)&&(document.form.video.checked == false)) {
