--- a/cdi.html
+++ b/cdi.html
@@ -130,7 +130,7 @@ this.form.result7.style.display='inline';
  this.form.result7.style.display='none';
  this.form.result8.style.display='none';
  this.form.result9.style.display='none';
- this.form.result10.style.display='none';
+ this.form.result10.style.display='inline';
  this.form.result11.style.display='none';
  this.form.result12.style.display='none';
  this.form.result13.style.display='none';
