--- a/cdi.html
+++ b/cdi.html
@@ -133,7 +133,7 @@ this.form.result7.style.display='inline';
  this.form.result11.style.display='none';
  this.form.result12.style.display='none';
  this.form.result13.style.display='none';
- this.form.result14.style.display='none';
+ this.form.result14.style.display='inline';
  this.form.result15.style.display='none';
  this.form.result16.style.display='inline';
  this.form.result17.style.display='inline';
