--- a/cdi.html
+++ b/cdi.html
@@ -5,8 +5,8 @@ function copieChoix()
  var separ2 = ". ";
  var separ3 = "p. ";
  var separ4 = "n° ";
- var separ5 = " Consulté le : ";
- var separ6 = "Disponible sur ";
+ var separ5 = " Consulté le ";
+ var separ6 = "Disponible sur : ";
  var separ7 = " [En ligne]";
  var separ8 = "\"";
  var separ9 = " p.";
@@ -33,7 +33,7 @@ function copieChoix()
  }
  if (document.form.video.checked == true) {
  document.getElementById("result20").focus();
- var concat = document.getElementById("result").value + separ + document.getElementById("result2").value + separ2 + document.getElementById("result19").value.italics() + separ2 + document.getElementById("result16").value + separ + document.getElementById("result17").value + separ + document.getElementById("result18").value + separ2 + separ6 + document.getElementById("result14").value + separ2 + separ5 + document.getElementById("result10").value;
+ var concat = document.getElementById("result").value + separ + document.getElementById("result2").value + separ2 + document.getElementById("result19").value.italics() + separ2 + document.getElementById("result19).style.color = "red" + separ2 + document.getElementById("result16").value + separ + document.getElementById("result17").value + separ + document.getElementById("result18").value + separ2 + separ6 + document.getElementById("result14").value + separ2 + separ5 + document.getElementById("result10").value;
  document.getElementById("result20").value = concat;
  }
  if ((document.form.livre.checked == false)&&(document.form.chapitre.checked == false)&&(document.form.article.checked == false)&&(document.form.web.checked == false)&&(document.form.video.checked == false)) {
