--- a/cdi.html
+++ b/cdi.html
@@ -146,7 +146,7 @@ this.form.result7.style.display='inline';
  }
  return true;" id="video" />Vidéo en ligne <br /><br /><b>2 - Remplissez les champs suivants :</b><br />(Passez la souris sur les champs pour avoir plus d'informations)<br /><br />
 <table style="border-collapse: collapse; width: 620px; height: 80px;">
- #result19 {
+ result19 {
   color: red;
 }
 <tbody>
