--- a/cdi.html
+++ b/cdi.html
@@ -143,12 +143,10 @@ this.form.result7.style.display='inline';
  this.form.result17.style.display='inline';
  this.form.result18.style.display='inline';
  this.form.result19.style.display='inline';
+ this.form.result19.style.color = 'red';
  }
  return true;" id="video" />Vidéo en ligne <br /><br /><b>2 - Remplissez les champs suivants :</b><br />(Passez la souris sur les champs pour avoir plus d'informations)<br /><br />
 <table style="border-collapse: collapse; width: 620px; height: 80px;">
- result19 {
-  color: red;
-}
 <tbody>
 <tr>
 <td style="padding-top:5px;"><input size="28" value="Nom de l'auteur/réalisateur" title="Vide si l'auteur est anonyme." id="result" /></td>
