--- a/cdi.html
+++ b/cdi.html
@@ -13,6 +13,7 @@ function copieChoix()
  var separ10 = "In : "; 
  if (document.form.livre.checked == true) {
  document.getElementById("result20").focus();
+ document.getElementById("result19").style.color = "red";
  var concat = document.getElementById("result").value + separ + document.getElementById("result2").value + separ2 + document.getElementById("result3").value.italics() + separ2 + document.getElementById("result6").value + separ + document.getElementById("result9").value + separ2 + document.getElementById("result12").value + separ9;
  document.getElementById("result20").value = concat;
  }
@@ -143,7 +144,6 @@ this.form.result7.style.display='inline';
  this.form.result17.style.display='inline';
  this.form.result18.style.display='inline';
  this.form.result19.style.display='inline';
- this.form.result19.style.color = 'red';
  }
  return true;" id="video" />Vidéo en ligne <br /><br /><b>2 - Remplissez les champs suivants :</b><br />(Passez la souris sur les champs pour avoir plus d'informations)<br /><br />
 <table style="border-collapse: collapse; width: 620px; height: 80px;">
