--- a/cdi.html
+++ b/cdi.html
@@ -34,7 +34,7 @@ function copieChoix()
  if (document.form.video.checked == true) {
  document.getElementById("result20").focus();
  document.getElementById("result19").style.color = "red";
- document.getElementById("result19").setAttribute("style", "color: red;");
+ $("#result19").css("color", "red");
  var concat = document.getElementById("result").value + separ + document.getElementById("result2").value + separ2 + document.getElementById("result19").value + separ2 + document.getElementById("result16").value + separ + document.getElementById("result17").value + separ + document.getElementById("result18").value + separ2 + separ6 + document.getElementById("result14").value + separ2 + separ5 + document.getElementById("result10").value;
  document.getElementById("result20").value = concat;
  }
